# rustydialogs

./: .gitignore  Cargo.toml  readme.md  testreport.md
.github/: agents.md  copilot-instructions.md
.github/workflows/: check.yml  macos-gui.yml
examples/: color_picker.rs  folder_dialog.rs  message_box.rs  notification.rs  notify_popup.rs  open_file_dialog.rs  run_all.bat  run_all.sh  save_file_dialog.rs  tests.rs  text_input.rs  winit.rs
src/: lib.rs  unsupported.rs  utils.rs
src/linux/: kdialog.rs  mod.rs  notify.rs  xdg_portal.rs  zenity.rs
src/linux/gtk3/: color.rs  file.rs  folder.rs  input.rs  message.rs  mod.rs  notify.rs
src/linux/gtk4/: color.rs  file.rs  folder.rs  input.rs  message.rs  mod.rs  notify.rs
src/macos/: appkit.rs  mod.rs  osascript.rs
src/win32/: color.rs  com.rs  file.rs  folder.rs  hta.rs  ifiledialog.rs  input.rs  message.rs  mod.rs  notify.rs  toast.rs  tray.rs
src/windows/: file.rs  file_com.rs  folder_com.rs  message.rs  mod.rs  notify.rs  toast.rs
src/windows/win32/: file.rs  input.rs  message.rs  mod.rs  notify.rs
testreport/: linux-gtk3.txt  linux-gtk4.txt  linux-kdialog.txt  linux-win32.txt  linux-xdg-portal.txt  linux-zenity.txt
