[package]
name = "rustydialogs"
version = "0.2.0"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

description = "Provides a simple and cross-platform way to display native dialog boxes."
documentation = "https://docs.rs/rustydialogs"
repository = "https://github.com/CasualX/rustydialogs"
keywords = ["dialog", "ui", "message", "file"]
categories = ["gui"]

[lib]
name = "rustydialogs"
path = "src/lib.rs"

[features]
default = []
gtk3 = [
	"dep:gtk-sys",
	"dep:glib-sys",
	"dep:gobject-sys",
	"dep:gdk-sys",
	"dep:libnotify-sys",
]

[dependencies]
raw-window-handle = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

gtk-sys = { version = "0.18", optional = true }
glib-sys = { version = "0.18", optional = true }
gobject-sys = { version = "0.18", optional = true }
gdk-sys = { version = "0.18", optional = true }
libnotify-sys = { version = "1.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows.version = "0.62"
windows.features = [
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_System_LibraryLoader",
	"Win32_UI_Controls",
	"Win32_UI_Controls_Dialogs",
	"Win32_UI_Shell",
	"Win32_UI_Shell_Common",
	"Win32_UI_WindowsAndMessaging",
]
