[package]
name = "rustydialogs"
version = "0.4.2"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

description = "Provides a simple and cross-platform way to display native dialog boxes."
documentation = "https://docs.rs/rustydialogs"
repository = "https://github.com/CasualX/rustydialogs"
readme = "readme.md"
keywords = ["dialog", "ui", "message", "file"]
categories = ["gui"]

[lib]
name = "rustydialogs"
path = "src/lib.rs"

[features]
default = []
winrt-toast = []
libnotify = [
	"dep:libnotify-sys",
	"dep:gobject-sys",
]
xdg-portal = [
	"dep:dbus",
]
gtk3 = [
	"dep:gtk-sys",
	"dep:glib-sys",
	"dep:gobject-sys",
	"dep:gdk-sys",
	"libnotify",
]
gtk4 = [
	"dep:gtk4-sys",
	"dep:gdk4-sys",
	"dep:gtk4-gio-sys",
	"dep:gtk4-glib-sys",
	"dep:gtk4-gobject-sys",
	"libnotify",
]
appkit = [
	"dep:objc2",
	"dep:objc2-foundation",
	"dep:objc2-app-kit",
	"dep:dispatch2",
]

[dependencies]
raw-window-handle = "0.6"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
libc = "0.2"

dbus = { version = "0.9", optional = true }

gtk-sys = { version = "0.18", optional = true }
glib-sys = { version = "0.18", optional = true }
gobject-sys = { version = "0.18", optional = true }
gdk-sys = { version = "0.18", optional = true }

gtk4-sys = { version = "0.11", optional = true }
gdk4-sys = { version = "0.11", optional = true }
gtk4-gio-sys = { package = "gio-sys", version = "0.22", optional = true }
gtk4-glib-sys = { package = "glib-sys", version = "0.22", optional = true }
gtk4-gobject-sys = { package = "gobject-sys", version = "0.22", optional = true }

libnotify-sys = { version = "1.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows.version = "0.62"
windows.features = [
	"Data_Xml_Dom",
	"UI_Notifications",
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_LibraryLoader",
	"Win32_System_Variant",
	"Win32_UI_Controls",
	"Win32_UI_Controls_Dialogs",
	"Win32_UI_Shell",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_UI_Shell_Common",
	"Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", optional = true }
objc2-foundation = { version = "0.3.2", optional = true }
objc2-app-kit = { version = "0.3.2", optional = true }
dispatch2 = { version = "0.3.1", optional = true }
